# Apes

./: .env.apechain.example  .gitignore  ADMIN_MARKET_DEPLOYMENT.md  AFTER_FUNDING_STEPS.md  ALCHEMY_RPC_UPDATE.md  API_CONNECTIVITY_FIXES.md  BACKEND_CONSOLIDATION_PLAN.md  BACKEND_IMPLEMENTATION_SUMMARY.md  BACKEND_STRUCTURE_UPDATE.md  BELIEVE_API_SETUP.md  BELIEVE_API_UPDATE.md  BELIEVE_INTEGRATION.md  CLEAN_RAILWAY_ENV_VARS.txt  COMPREHENSIVE_E2E_TESTING_GUIDE.md  Club_WC_2025_Fixtures_with_Nation_Flag_V2.53_-_XL.xlsx  DEPLOYMENT_GUIDE.md  DEPLOYMENT_OPTIONS.md  DEPLOYMENT_ORDER.md  DEPLOYMENT_RESUME.md  DEPLOYMENT_SUCCESS_SUMMARY.md  DEPLOYMENT_TRIGGER.md  EMERGENCY_FIX_COPY_PASTE.md  ENGAGEMENT_POINTS_BUG_FIX.md  ENGAGEMENT_VALIDATION_FIX.md  ENGAGEMENT_VALIDATION_IMPROVEMENTS.md  ENGAGE_TO_EARN_DESIGN.md  ENGAGE_TO_EARN_IMPROVEMENTS.md  ENGAGE_TO_EARN_README.md  ENGAGE_TO_EARN_V2_DESIGN.md  ENGAGE_TO_EARN_V2_SUMMARY.md  ENV_QUICK_REFERENCE.md  FEE_LABELS_UPDATE.md  FEE_STRUCTURE_TRANSPARENCY.md  FINAL_DATABASE_FIX_GUIDE.md  FINAL_DEPLOYMENT_CHECKLIST.md  FINAL_RAILWAY_CONFIG.txt  FIXES_VERIFICATION.md  FRESH_APES_TOKEN.txt  FRESH_DEPLOYMENT_GUIDE.md  FRESH_DEPLOYMENT_SUMMARY.md  (+84 more)
backend/: COMPLETE_DATABASE_FIX.sql  env.example  (+34 more)
src/smart_contracts/market_system/programs/market_system/: Cargo.toml
src/smart_contracts/market_system/programs/market_system/src/: access_control.rs  lib.rs  lib.rs.backup  security_checks.rs  security_fixes.rs  security_fixes_implementation.rs
src/smart_contracts/market_system/programs/market_system/src/market/: market_system.rs  mod.rs
(+319 files in other folders)
